make IssueTranslator a singleton per locale